# AdventOfCode

./: Makefile  pyproject.toml
advent_of_code/: main.py
advent_of_code/utils/: read_file.py
advent_of_code/y2015/: day01.py  day02.py  day03.py  day04.py  day05.py
