[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["FunctionallyUseless <edd2iron@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
